Upgrade java version to java 25, upgrade gradle wrapper fix minor vulkan validation error